<resources>
    <string name="app_name">Weather</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="select_location">Select location</string>
    <string name="add_location">Add</string>
    <string name="location_added">Location added</string>
    <string name="location_exists">Location already exists</string>
    <string name="delete_location">remove</string>
    <string name="location_name_empty">location name is empty</string>
    <string name="action_select_location">select location</string>
    <string name="action_refresh">refresh</string>
    <string name="action_select_units">select units</string>
    <string name="cannot_load_weather">cannot load weather</string>
    <string name="no_network_connection">internet connection is unavailable</string>
    <string name="location_doesnt_exist">Location with specified name doesn\'t exist. </string>
    <string name="loading">loading...</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weather_time_label">Last update:</string>
    <string name="weather_temperature_label">Temperature</string>
    <string name="weather_pressure_label">Pressure</string>
    <string name="weather_humidity_label">Humidity:</string>
    <string name="weather_visibility_label">Visibility:</string>
    <string name="weather_sunrise_label">Sun rise:</string>
    <string name="weather_sunset_label">Sun set:</string>
    <string name="title_activity_select_location">SelectLocationActivity</string>
    <string name="metric">metric</string>
    <string name="imperial">imperial</string>
    <string name="did_you_mean_one_of_the_following">Did you mean one of the following?\n</string>
    <string name="no_locations">There are no locations</string>
    <string name="forecast">Forecast</string>
    <string name="did_you_mean">Did you mean:\n\n</string>
    <string name="cannot_load_weather_due_to_no_connection">Cannot load weather because there is no internet connection available</string>
    <string name="type_name">type name here</string>
</resources>
