<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.example.pszczolkowski.weather.SelectLocationActivity"
                android:orientation="vertical"
                android:focusable="true"
                android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/select_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:textSize="30dp"/>

        <TextView
            android:id="@+id/empty_locations_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:text="@string/no_locations"/>

        <ListView
            android:id="@+id/location_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <EditText
            android:id="@+id/new_location_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/edit_text"
            android:layout_marginRight="5dp"
            android:hint="@string/type_name"
            android:padding="5dp"/>

        <Button
            android:id="@+id/addLocationButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/add_location"
            android:layout_weight="3"
            android:background="#ff00ce49"/>

    </LinearLayout>

</RelativeLayout>
